@@ -14,12 +14,14 @@ done
 if [ "$gen" = "yes" ]; then
   autoconf -I `gauche-config --ac`
   (cd examples; autoconf -I `gauche-config --ac`)
+  svnversion >REVISION
 fi
 
 if [ "$tgz" = "yes" ]; then
   if [ -f Makefile ]; then make maintainer-clean; fi
   autoconf -I `gauche-config --ac`
   (cd examples; autoconf -I `gauche-config --ac`)
+  svnversion >REVISION
   ./configure
   (cd doc; make html)
   make distclean
