@@ -1,3 +1,10 @@
+2008-05-15  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: DIST, Makefile.in, configure.ac, src/Makefile.in,
+	          src/kahua/config.scm.in
+	  Embed working copy revision in kahua.config module at the
+	  build time(experimental).  svnversion command is required.
+
 2008-04-22  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* These are fixes of problems on Leopard (Mac OS X 10.5.x).
